<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Juego de Colores</string>

    <!-- WelcomeFragment -->
    <string name="welcome_title">¡Bienvenido al Juego de Colores!</string>
    <string name="welcome_description">Demuestra qué tan rápidos son tus reflejos eligiendo el color correcto.
        \n\nTienes 30 segundos para obtener la mayor cantidad de puntos posible.\n\n¡Haz clic en el botón que tenga el mismo color que ves en la pantalla!</string>
    <string name="start_game">Comenzar Juego</string>
    <string name="colores_del_juego">Colores disponibles</string>

    <!-- GameFragment -->
    <string name="score">Puntos: %1$d</string>
    <string name="time_remaining">Tiempo restante: %1$d s</string>
    <string name="pink">Rosa</string>
    <string name="cyan">Cian</string>
    <string name="magenta">Magenta</string>
    <string name="lime">Lima</string>
    <string name="brown">Marrón</string>
    <string name="teal">Verde Azulado</string>

    <!-- ResultFragment -->
    <string name="result_title">¡Fin del juego!</string>
    <string name="score_final">Puntaje final: %1$d</string>
    <string name="high_score">¡Nuevo récord alcanzado! Mejor puntuación: %1$d</string>
    <string name="message_bad">¡Seguro que la próxima será mejor!</string>
    <string name="message_good">¡Buen trabajo!</string>
    <string name="message_great">¡Excelente desempeño!</string>
    <string name="play_again">Volver a jugar</string>
    <string name="back_to_menu">Regresar al menú</string>
</resources>